--- a/day2_/deneme.css
+++ b/day2_/deneme.css
@@ -1,9 +1,9 @@
 /* burda h ile ilgili tum elemanlar değişiklik yapıldı */
 
 h3 {
-    color: brown;
+ color: rgb(8, 168, 8);
     text-align: center;
-    background-color: blueviolet;
+
 }
  /* burda p ile ilgili tum elemanlar değişiklik yapılır */
 p{
